# platoanalyze

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: AbstractGlobalVectorFunctionInc.hpp  AbstractLinearStress.hpp  AbstractLocalMeasure.hpp  AbstractLocalScalarFunctionInc.hpp  AbstractLocalVectorFunctionInc.hpp  AbstractPlatoMesh.hpp  AbstractPlatoMeshIO.hpp  AbstractTMKinetics.cpp  AbstractTMKinetics.hpp  AbstractYieldStress.cpp  AbstractYieldStress.hpp  AdjointComplexRayleighDamping.hpp  AdjointStructuralDynamicsResidual.hpp  AnalyzeAppUtils.cpp  AnalyzeAppUtils.hpp  AnalyzeConfig.hpp.in  AnalyzeMacros.hpp  AnalyzeOutput.hpp  Analyze_App.cpp  Analyze_App.hpp  Analyze_Diagnostics.hpp  Analyze_MPMD.cpp  ApplyConstraints.hpp  ApplyPenalty.hpp  ApplyProjection.hpp  ApplyWeighting.hpp  Assembly.hpp  BLAS1.hpp  BLAS2.hpp  BLAS3.hpp  Bar2.hpp  BaseExpInstMacros.hpp  BasicLocalScalarFunction.cpp  BasicLocalScalarFunction.hpp  BodyLoads.hpp  CMakeLists.txt  CellForcing.hpp  CellVolume.hpp  ComplexElasticEnergy.hpp  ComplexInertialEnergy.hpp  (+271 more)
src/alg/: AmgXConfigs.cpp  AmgXConfigs.hpp  AmgXLinearSolver.cpp  AmgXLinearSolver.hpp  AmgXSparseLinearProblem.hpp  Analyze.cpp  CrsLinearProblem.hpp  CrsMatrix.hpp  CrsMatrixUtils.hpp  EpetraLinearSolver.cpp  EpetraLinearSolver.hpp  ErrorHandling.hpp  ParallelComm.cpp  ParallelComm.hpp  ParseInput.cpp  ParseInput.hpp  PlatoAbstractSolver.cpp  PlatoAbstractSolver.hpp  PlatoSolverFactory.cpp  PlatoSolverFactory.hpp  Run.cpp  Run.hpp  TachoLinearSolver.cpp  TachoLinearSolver.hpp  TpetraLinearSolver.cpp  TpetraLinearSolver.hpp  UMFPACKLinearSolver.cpp  UMFPACKLinearSolver.hpp
src/contact/: AbstractContactForce.hpp  AbstractSurfaceDisplacement.hpp  CompliantContactForce.hpp  ContactForceFactory.hpp  ContactPair.cpp  ContactPair.hpp  ContactUtils.cpp  ContactUtils.hpp  IntegrateContactForce.hpp  NormalContactForce.hpp  ProjectedSurfaceDisplacement.hpp  SurfaceDisplacement.hpp  SurfaceDisplacementFactory.hpp  UpdateGraphForContact.cpp  UpdateGraphForContact.hpp
src/elliptic/: AbstractScalarFunction.hpp  AbstractVectorFunction.hpp  DivisionFunction.cpp  DivisionFunction.hpp  DivisionFunction_decl.hpp  DivisionFunction_def.hpp  EMStressPNorm.cpp  EMStressPNorm.hpp  EMStressPNorm_decl.hpp  EMStressPNorm_def.hpp  EffectiveEnergy.cpp  EffectiveEnergy.hpp  EffectiveEnergy_decl.hpp  EffectiveEnergy_def.hpp  ElastostaticResidual.cpp  ElastostaticResidual.hpp  ElastostaticResidual_decl.hpp  ElastostaticResidual_def.hpp  ElectroelastostaticResidual.cpp  ElectroelastostaticResidual.hpp  ElectroelastostaticResidual_decl.hpp  ElectroelastostaticResidual_def.hpp  EvaluationTypes.hpp  ExpInstMacros.hpp  FluxPNorm.cpp  FluxPNorm.hpp  FluxPNorm_decl.hpp  FluxPNorm_def.hpp  InternalElasticEnergy.cpp  InternalElasticEnergy.hpp  InternalElasticEnergy_decl.hpp  InternalElasticEnergy_def.hpp  InternalElectroelasticEnergy.cpp  InternalElectroelasticEnergy.hpp  InternalElectroelasticEnergy_decl.hpp  InternalElectroelasticEnergy_def.hpp  InternalThermalEnergy.cpp  InternalThermalEnergy.hpp  InternalThermalEnergy_decl.hpp  InternalThermalEnergy_def.hpp  (+74 more)
src/functional/: AnalyzeCriterionInterface.cpp  AnalyzeCriterionInterface.hpp  CMakeLists.txt  FunctionalInterface.cpp  FunctionalInterface.hpp  FunctionalInterfaceUtilities.cpp  FunctionalInterfaceUtilities.hpp  HelmholtzFilterInterface.cpp  HelmholtzFilterInterface.hpp  SolutionCache.cpp  SolutionCache.hpp
src/geometric/: AbstractScalarFunction.hpp  DivisionFunction.cpp  DivisionFunction.hpp  DivisionFunction_decl.hpp  DivisionFunction_def.hpp  EvaluationTypes.hpp  ExpInstMacros.hpp  FadTypes.hpp  GeometricalElement.hpp  GeometryMisfit.hpp  GeometryScalarFunction.cpp  GeometryScalarFunction.hpp  GeometryScalarFunction_decl.hpp  GeometryScalarFunction_def.hpp  LeastSquaresFunction.cpp  LeastSquaresFunction.hpp  LeastSquaresFunction_decl.hpp  LeastSquaresFunction_def.hpp  MassMoment.cpp  MassMoment.hpp  MassMoment_decl.hpp  MassMoment_def.hpp  MassPropertiesFunction.cpp  MassPropertiesFunction.hpp  MassPropertiesFunction_decl.hpp  MassPropertiesFunction_def.hpp  ScalarFunctionBase.hpp  ScalarFunctionBaseFactory.cpp  ScalarFunctionBaseFactory.hpp  ScalarFunctionBaseFactory_decl.hpp  ScalarFunctionBaseFactory_def.hpp  Volume.hpp  WeightedSumFunction.cpp  WeightedSumFunction.hpp  WeightedSumFunction_decl.hpp  WeightedSumFunction_def.hpp  WorksetBase.hpp
src/helmholtz/: AbstractVectorFunction.hpp  AddMassTerm.hpp  EvaluationTypes.hpp  ExpInstMacros.hpp  Helmholtz.hpp  HelmholtzElement.hpp  HelmholtzFlux.hpp  HelmholtzResidual.cpp  HelmholtzResidual.hpp  Problem.cpp  Problem.hpp  Problem_decl.hpp  Problem_def.hpp  VectorFunction.hpp
src/hyperbolic/: AbstractScalarFunction.hpp  AbstractVectorFunction.hpp  ElastomechanicsResidual.cpp  ElastomechanicsResidual.hpp  ElastomechanicsResidual_decl.hpp  ElastomechanicsResidual_def.hpp  EvaluationTypes.hpp  ExpInstMacros.hpp  InertialContent.hpp  InternalElasticEnergy.cpp  InternalElasticEnergy.hpp  InternalElasticEnergy_decl.hpp  (+21 more)
tests/: CMakeLists.txt
unit_tests/: AnalyzeAppIntxTests.cpp  AnalyzeAppIntxTests.hpp  AssemblyTests.cpp  CMakeLists.txt  ComputationalFluidDynamicsTests.cpp  ContactTests.cpp  CrsMatrixUtilsTests.cpp  ElasticTests_Tet10.cpp  ElastoPlasticityTests.cpp  ElastostaticTests.cpp  ElectroelasticTests.cpp  ElementTests.cpp  EllipticHatchingTests.cpp  EngineMeshIntxTests.cpp  ExpressionEvaluatorTest.cpp  GeometryMisfitTests.cpp  HeatEquationTests.cpp  LinearMaterialModelTests.cpp  MassPropertiesTests.cpp  MaterialBasisTest.cpp  NaturalBCDataTests.cpp  NaturalBCTests.cpp  NaturalBCsTests.cpp  PlasticityTests.cpp  PlatoAugLagStressTest.cpp  PlatoFunctorsTest.cpp  PlatoHelmholtzFilterTests.cpp  PlatoHelmholtzMatrixTests.cpp  PlatoMaterialModelTest.cpp  PlatoMathHelpersTest.cpp  PlatoMathTypesTests.cpp  PlatoMeshMapTests.cpp  PlatoMultipointConstraintTests.cpp  PlatoSolverInterfaceTests.cpp  PlatoSpatialModelTests.cpp  PlatoUnitTestMain.cpp  ReadDataTest.cpp  RelaxedMicromorphicTests.cpp  SolutionFunctionTests.cpp  StabilizedMechanicsTests.cpp  (+13 more)
(+276 files in other folders)
